manifiest/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: n8n
  name: n8n
  namespace: n8n
spec:
  type: NodePort
  ports:
    - name: "5678"
      port: 5678
      targetPort: 5678
      protocol: TCP
      nodePort: 30078 # Opcional, puede estar entre 30000-32767
  selector:
    service: n8n
