manifiest/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-certdiscoveryhost-n8n
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: "ingress-certdiscoveryhost-n8n"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP"
    alb.ingress.kubernetes.io/healthcheck-port: "traffic-port"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-central-1:590184105427:certificate/71994154-7acc-4ffc-9edf-62da59bd1c66"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    external-dns.alpha.kubernetes.io/hostname: "n8n.infra.umibu.io"
spec:
  ingressClassName: "my-aws-ingress-class"
  defaultBackend:
    service:
      name: n8n
      port:
        number: 5678
  rules:
    - host: "n8n.infra.umibu.io"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678
